--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link rel="icon" type="image/svg+xml" href="/tab-title.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kanban Board</title>
+    <title>Project Plans</title>
     <link href="/dist/styles.css" rel="stylesheet">
   </head>
   <body>
